--- a/.github/workflow/snake.yml
+++ b/.github/workflow/snake.yml
@@ -1,14 +1,12 @@
 name: Generate snake animation
-
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
+  schedule:
+    - cron: "0 */12 * * *"  # runs every 12 hours
   workflow_dispatch:
-
   push:
     branches:
     - master
+    - main    # adding main since many repositories use main as default branch
 
 jobs:
   generate:
@@ -16,14 +14,12 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
     steps:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: jeswanth1212
           outputs: dist/snake.svg?palette=github-dark
-
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
